fixed spacing

--- a/style/style.css
+++ b/style/style.css
@@ -127,6 +127,6 @@ body{
 	z-index: 2;
 }
 .fa-twitter, .fa-instagram, .fa-pinterest-p{
-padding-left: 5rem;
+padding-left: 3rem;
 
 }
